# NQueens

./: .gitignore  CMakeLists.txt  build_debug.sh  build_release.sh  run_build_debug.sh  run_build_release.sh
src/Headers/: Exception.hpp  NQueenBoard.hpp
src/Sources/: main.cpp
